<resources>
    <string name="app_name">SignUp</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="edit_email">이메일을 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">대문자, 소문자, 숫자 1개 이상, 8글자 이상 입력.</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">닉네임을 입력해주세요. (8~30자)</string>
    <string name="password_confirm_hint">비밀번호를 다시 입력해주세요.</string>
    <string name="birth">생년월일</string>
    <string name="year_hint">년(4자)</string>
    <string name="required_terms">개인정보 수집 및 이용 동의</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="optional_terms">광고 수신 동의(선택)</string>
    <string name="submit">제출</string>
    <string name="sex">성별</string>
    <string name="men">남성</string>
    <string name="women">여성</string>
    <string name="not_selected">선택 안 함</string>
    <string name="birth_hint">생년월일을 입력해주세요.</string>
    <string name="progressing">진행중</string>
    <string name="zero">0%</string>
    <string name="notice">Notice</string>
    <string name="confirm">확인</string>
    <string name="sign_up_complete">회원가입 완료</string>
    <string name="user_info">회원 정보</string>
    <string name="required_term">필수 약관</string>
    <string name="optional_term">선택 약관</string>
    <string name="restart">다시하기</string>
    <string name="data_reset">데이터 초기화</string>
    <string name="required">(필수)</string>
</resources>